--- a/README
+++ b/README
@@ -1,23 +1,23 @@
 RakeJava is a ruby gem for use with Rake.  It lets you compile and jar Java files.
 
-Example:
+Simple Example:
 
 require 'rakejava'
 require 'rake/clean'
 
-CLEAN.include 'build/*'
+CLEAN.include 'build'
 
 task :default => "myproj.jar"
 
 jar "myproj.jar" => :compile do |t|
-	t.root = "build"
-	t.files << FileList["*.class"]
+	t.files << JarFiles["build", "**/*.class"]
 	t.manifest = {:version => '1.0.0'}
 end
 
 javac :compile => "build" do |t|
 	t.src << Sources["src", "**/*.java"]
 	t.src << Sources["test", "*.java"]
+	t.classpath << Dir["lib/**/*.{zip,jar}"]
 	t.dest = 'build'
 end
 
